[gd_scene load_steps=24 format=3 uid="uid://bwf3h3o2wcrkt"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_ghdjj"]
[ext_resource type="PackedScene" uid="uid://c5ne5rqn3tnus" path="res://scenes/player.tscn" id="2_owedk"]
[ext_resource type="PackedScene" uid="uid://cv3g6dabe6tv" path="res://scenes/tile_map.tscn" id="3_2wbee"]
[ext_resource type="TileSet" uid="uid://dmytyke52q7vr" path="res://themes/tileset.tres" id="4_aytyc"]
[ext_resource type="PackedScene" uid="uid://cm48kah6kcwik" path="res://scenes/menu.tscn" id="6_xp7mi"]
[ext_resource type="PackedScene" uid="uid://c58lq3l5fj04b" path="res://scenes/translation_puzzle.tscn" id="7_0t65n"]
[ext_resource type="PackedScene" uid="uid://boido4fuw5guj" path="res://scenes/ui.tscn" id="7_2t8o1"]
[ext_resource type="FontFile" uid="uid://doqhhnmd5e1jo" path="res://assets/fonts/MedievalSharp-Regular.ttf" id="7_aeotv"]
[ext_resource type="StyleBox" uid="uid://dxtdgyt3x5pmb" path="res://themes/button_texture_opaque.tres" id="8_euk0j"]
[ext_resource type="PackedScene" uid="uid://cnoduc7ugee1a" path="res://scenes/deathzone.tscn" id="8_o1psb"]
[ext_resource type="Texture2D" uid="uid://cofu668pq2wny" path="res://assets/ui/Game menus-01.png" id="9_ief7k"]
[ext_resource type="Texture2D" uid="uid://bb2dx7erc37qy" path="res://assets/background/tiles/Sign_01.png" id="9_v4cas"]
[ext_resource type="FontFile" uid="uid://c0jy7kximrfeq" path="res://assets/fonts/Medieval Scroll of Wisdom.ttf" id="10_dagsg"]
[ext_resource type="PackedScene" uid="uid://dmxps2gmtbl4f" path="res://scenes/statue.tscn" id="11_byl0k"]
[ext_resource type="StyleBox" uid="uid://b70gug4noqp4w" path="res://themes/opaque_texture.tres" id="11_ktkah"]
[ext_resource type="AudioStream" uid="uid://chncaqsbge0m6" path="res://assets/sound/violin-lose-4-185125.mp3" id="11_qta7l"]
[ext_resource type="AudioStream" uid="uid://6qd7ese05dah" path="res://assets/sound/game-setting-fantasy-142092.mp3" id="12_t8afc"]
[ext_resource type="PackedScene" uid="uid://2ahdyxqqs80y" path="res://scenes/background.tscn" id="13_c1inx"]
[ext_resource type="AudioStream" uid="uid://5c41rqdmkmcc" path="res://assets/sound/violin-win-5-185128.mp3" id="14_2canv"]
[ext_resource type="PackedScene" uid="uid://dbkxis152wuwe" path="res://scenes/weak_ground.tscn" id="14_54tyx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_te3o2"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
texture = ExtResource("9_ief7k")
region_rect = Rect2(75.0029, 3973.99, 1154.44, 224.166)

[sub_resource type="Theme" id="Theme_r3ilj"]
resource_local_to_scene = true
Button/font_sizes/font_size = 24
Button/fonts/font = ExtResource("7_aeotv")
Button/styles/disabled = ExtResource("8_euk0j")
Button/styles/hover = SubResource("StyleBoxTexture_te3o2")
Button/styles/normal = ExtResource("8_euk0j")
Fonts/fonts/normal = ExtResource("10_dagsg")
Label/fonts/font = ExtResource("7_aeotv")
Label/styles/opaque = ExtResource("11_ktkah")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkbfw"]
size = Vector2(60, 1490)

[node name="Level 1" type="Node2D"]
script = ExtResource("1_ghdjj")

[node name="Node" type="Node" parent="."]

[node name="Sign01" type="Sprite2D" parent="Node"]
position = Vector2(665, 547)
texture = ExtResource("9_v4cas")

[node name="TileMap" parent="." instance=ExtResource("3_2wbee")]
tile_set = ExtResource("4_aytyc")
layer_0/tile_data = PackedInt32Array(327687, 1376303, 5, 393223, 1376303, 6, 327688, 1441839, 5, 393224, 1441839, 6, 327685, 589871, 5, 393221, 589871, 6, 327686, 655407, 5, 393222, 655407, 6, 327683, 589871, 5, 393219, 589871, 6, 327684, 655407, 5, 393220, 655407, 6, 327681, 589871, 5, 393217, 589871, 6, 327682, 655407, 5, 393218, 655407, 6, 393215, 589871, 5, 458751, 589871, 6, 327680, 655407, 5, 393216, 655407, 6, 393213, 589871, 5, 458749, 589871, 6, 393214, 655407, 5, 458750, 655407, 6, 393211, 589871, 5, 458747, 589871, 6, 393212, 655407, 5, 458748, 655407, 6, 458759, 47, 10, 524295, 47, 11, 458760, 65583, 10, 524296, 65583, 11, 458757, 1114159, 5, 524293, 1114159, 6, 458758, 1179695, 5, 524294, 1179695, 6, 458755, 1114159, 5, 524291, 1114159, 6, 458756, 1179695, 5, 524292, 1179695, 6, 458753, 1114159, 5, 524289, 1114159, 6, 458754, 1179695, 5, 524290, 1179695, 6, 524287, 1114159, 5, 589823, 1114159, 6, 458752, 1179695, 5, 524288, 1179695, 6, 524285, 1114159, 5, 589821, 1114159, 6, 524286, 1179695, 5, 589822, 1179695, 6, 524283, 1114159, 5, 589819, 1114159, 6, 524284, 1179695, 5, 589820, 1179695, 6, 524281, 1114159, 6, 589817, 1114159, 6, 524282, 1179695, 6, 589818, 1179695, 6, 327703, 852015, 5, 393239, 852015, 6, 327704, 917551, 5, 393240, 917551, 6, 458775, 1507375, 5, 524311, 1507375, 6, 458776, 1572911, 5, 524312, 1572911, 6, 327705, 589871, 5, 393241, 589871, 6, 327706, 655407, 5, 393242, 655407, 6, -65503, 1507375, 5, -65502, 1572911, 5, -196575, 1507375, 5, -131039, 1507375, 6, -196574, 1572911, 5, -131038, 1572911, 6, 262139, 47, 10, 327675, 47, 11, 262140, 65583, 10, 327676, 65583, 11, 131067, 47, 10, 196603, 47, 11, 131068, 65583, 10, 196604, 65583, 11, -5, 47, 10, 65531, 47, 11, -4, 65583, 10, 65532, 65583, 11, -131077, 47, 10, -65541, 47, 11, -131076, 65583, 10, -65540, 65583, 11, -196613, 1376303, 6, -196612, 1441839, 6, -327685, 589871, 5, -262149, 589871, 6, -327684, 655407, 5, -262148, 655407, 6, -327683, 1769519, 5, -262147, 1769519, 6, -327682, 1835055, 5, -262146, 1835055, 6, -327681, 1769519, 5, -262145, 1769519, 6, -393216, 1835055, 5, -327680, 1835055, 6, -393215, 1769519, 5, -327679, 1769519, 6, -393214, 1835055, 5, -327678, 1835055, 6, -393213, 1769519, 5, -327677, 1769519, 6, -393212, 1835055, 5, -327676, 1835055, 6, -393211, 1900591, 5, -327675, 1900591, 6, -393210, 1966127, 5, -327674, 1966127, 6, 458777, 1114159, 5, 524313, 1114159, 6, 458778, 1179695, 5, 524314, 1179695, 6, 458779, 1114159, 5, 524315, 1114159, 6, 458780, 1179695, 5, 524316, 1179695, 6, 458781, 1114159, 5, 524317, 1114159, 6, 458782, 1179695, 5, 524318, 1179695, 6, 458783, 1114159, 5, 524319, 1114159, 6, 458784, 1179695, 5, 524320, 1179695, 6, 458785, 1114159, 5, 524321, 1114159, 6, 458786, 1179695, 5, 524322, 1179695, 6, 327707, 983087, 5, 393243, 1245231, 805306373, 327708, 589871, 6, 393244, 1179695, 6, 262172, 589871, 5, 262173, 655407, 5, 262171, 720943, 268435461, 196638, 720943, 268435461, 262174, 983087, 5, 327709, 1376303, 6, 196639, 589871, 5, 196640, 655407, 5, 196641, 589871, 5, 196642, 655407, 5, 262175, 589871, 6, 262176, 655407, 6, 262177, 589871, 6, 262178, 655407, 6, 327710, 1245231, 805306373, 327711, 1114159, 6, 327712, 1179695, 6, 327713, 1114159, 5, 327714, 1179695, 5, 393249, 1114159, 5, 393250, 1179695, 5, 393247, 1114159, 5, 393248, 1179695, 5, 393245, 1114159, 5, 393246, 1179695, 5, 589831, 47, 10, 655367, 47, 11, 589832, 65583, 10, 655368, 65583, 11, 720903, 1114159, 5, 786439, 1114159, 6, 720904, 1179695, 5, 786440, 1179695, 6, 589847, 1507375, 5, 655383, 1507375, 6, 589848, 1572911, 5, 655384, 1572911, 6, 720919, 1114159, 5, 786455, 1114159, 6, 720920, 1179695, 5, 786456, 1179695, 6, 589829, 1114159, 5, 655365, 1114159, 6, 589830, 1179695, 5, 655366, 1179695, 6, 720901, 1114159, 5, 786437, 1114159, 6, 720902, 1179695, 5, 786438, 1179695, 6, 720899, 1114159, 5, 786435, 1114159, 6, 720900, 1179695, 5, 786436, 1179695, 6, 589827, 1114159, 5, 655363, 1114159, 6, 589828, 1179695, 5, 655364, 1179695, 6, 589825, 1114159, 5, 655361, 1114159, 6, 589826, 1179695, 5, 655362, 1179695, 6, 655359, 1114159, 5, 720895, 1114159, 6, 589824, 1179695, 5, 655360, 1179695, 6, 655357, 1114159, 5, 720893, 1114159, 6, 655358, 1179695, 5, 720894, 1179695, 6, 655355, 1114159, 5, 720891, 1114159, 6, 655356, 1179695, 5, 720892, 1179695, 6, 786429, 1114159, 5, 851965, 1114159, 6, 786430, 1179695, 5, 851966, 1179695, 6, 786431, 1114159, 5, 851967, 1114159, 6, 720896, 1179695, 5, 786432, 1179695, 6, 720897, 1114159, 5, 786433, 1114159, 6, 720898, 1179695, 5, 786434, 1179695, 6, 786427, 1114159, 5, 851963, 1114159, 6, 786428, 1179695, 5, 851964, 1179695, 6, 786425, 1114159, 5, 851961, 1114159, 6, 786426, 1179695, 5, 851962, 1179695, 6, 655353, 1114159, 5, 720889, 1114159, 6, 655354, 1179695, 5, 720890, 1179695, 6, 589849, 1114159, 5, 655385, 1114159, 6, 589850, 1179695, 5, 655386, 1179695, 6, 720921, 1114159, 5, 786457, 1114159, 6, 720922, 1179695, 5, 786458, 1179695, 6, 720923, 1114159, 5, 786459, 1114159, 6, 720924, 1179695, 5, 786460, 1179695, 6, 720925, 1114159, 5, 786461, 1114159, 6, 720926, 1179695, 5, 786462, 1179695, 6, 589851, 1114159, 5, 655387, 1114159, 6, 589852, 1179695, 5, 655388, 1179695, 6, 589853, 1114159, 5, 655389, 1114159, 6, 589854, 1179695, 5, 655390, 1179695, 6, 589855, 1114159, 5, 655391, 1114159, 6, 589856, 1179695, 5, 655392, 1179695, 6, 589857, 1114159, 5, 655393, 1114159, 5, 589858, 1179695, 5, 655394, 1179695, 5, 720927, 1114159, 5, 786463, 1114159, 6, 720928, 1179695, 5, 786464, 1179695, 6, 720929, 1114159, 6, 786465, 1114159, 5, 720930, 1179695, 6, 786466, 1179695, 5, 65569, 1507375, 5, 131105, 1507375, 6, 65570, 1572911, 5, 131106, 1572911, 6, 33, 1507375, 6, 34, 1572911, 6, 65571, 1114159, 5, 131107, 1114159, 6, 65572, 1179695, 5, 131108, 1179695, 6, -65501, 1114159, 5, 35, 1114159, 6, -65500, 1179695, 5, 36, 1179695, 6, -196573, 1114159, 5, -131037, 1114159, 6, -196572, 1179695, 5, -131036, 1179695, 6, 196643, 589871, 5, 262179, 589871, 6, 196644, 655407, 5, 262180, 655407, 6, 327715, 1114159, 5, 393251, 1114159, 6, 327716, 1179695, 5, 393252, 1179695, 6, 458787, 1114159, 5, 524323, 1114159, 5, 458788, 1179695, 5, 524324, 1179695, 5, 589859, 1114159, 6, 589860, 1179695, 6, 655395, 1114159, 5, 720931, 1114159, 6, 655396, 1179695, 5, 720932, 1179695, 6, 852001, 1114159, 6, 852002, 1179695, 6, 786467, 1114159, 5, 852003, 1114159, 6, 786468, 1179695, 5, 852004, 1179695, 6, -327647, 1507375, 5, -262111, 1507375, 6, -327646, 1572911, 5, -262110, 1572911, 6, -458719, 1507375, 5, -393183, 1507375, 6, -458718, 1572911, 5, -393182, 1572911, 6, -589791, 1507375, 5, -524255, 1507375, 6, -589790, 1572911, 5, -524254, 1572911, 6, -720863, 1507375, 5, -655327, 1507375, 6, -720862, 1572911, 5, -655326, 1572911, 6, -327645, 1114159, 5, -262109, 1114159, 6, -327644, 1179695, 5, -262108, 1179695, 6, -458717, 1114159, 5, -393181, 1114159, 6, -458716, 1179695, 5, -393180, 1179695, 6, -589789, 1114159, 5, -524253, 1114159, 6, -589788, 1179695, 5, -524252, 1179695, 6, -720861, 1114159, 5, -655325, 1114159, 6, -720860, 1179695, 5, -655324, 1179695, 6, -720859, 1114159, 5, -655323, 1114159, 6, -720858, 1179695, 5, -655322, 1179695, 6, -589787, 1114159, 5, -524251, 1114159, 6, -589786, 1179695, 5, -524250, 1179695, 6, -458715, 1114159, 5, -393179, 1114159, 6, -458714, 1179695, 5, -393178, 1179695, 6, -327643, 1114159, 5, -262107, 1114159, 6, -327642, 1179695, 5, -262106, 1179695, 6, -196571, 1114159, 5, -131035, 1114159, 6, -196570, 1179695, 5, -131034, 1179695, 6, -65499, 1114159, 5, 37, 1114159, 6, -65498, 1179695, 5, 38, 1179695, 6, 65573, 1114159, 5, 131109, 1114159, 6, 65574, 1179695, 5, 131110, 1179695, 6, 65575, 1114159, 5, 131111, 1114159, 6, 65576, 1179695, 5, 131112, 1179695, 6, -65497, 1114159, 5, 39, 1114159, 6, -65496, 1179695, 5, 40, 1179695, 6, -196569, 1114159, 5, -131033, 1114159, 6, -196568, 1179695, 5, -131032, 1179695, 6, -327641, 1114159, 5, -262105, 1114159, 6, -327640, 1179695, 5, -262104, 1179695, 6, -458713, 1114159, 5, -393177, 1114159, 6, -458712, 1179695, 5, -393176, 1179695, 6, -589785, 1114159, 5, -524249, 1114159, 6, -589784, 1179695, 5, -524248, 1179695, 6, -720857, 1114159, 5, -655321, 1114159, 6, -720856, 1179695, 5, -655320, 1179695, 6, 196645, 589871, 5, 262181, 589871, 6, 196646, 655407, 5, 262182, 655407, 6, 196647, 589871, 5, 262183, 589871, 6, 196648, 655407, 5, 262184, 655407, 6, 327717, 1114159, 5, 393253, 1114159, 6, 327718, 1179695, 5, 393254, 1179695, 6, 327719, 1114159, 5, 393255, 1114159, 6, 327720, 1179695, 5, 393256, 1179695, 6, 458791, 1114159, 5, 524327, 1114159, 6, 458792, 1179695, 5, 524328, 1179695, 6, 589863, 1114159, 5, 655399, 1114159, 6, 589864, 1179695, 5, 655400, 1179695, 6, 589861, 1114159, 5, 655397, 1114159, 6, 589862, 1179695, 5, 655398, 1179695, 6, 458789, 1114159, 5, 524325, 1114159, 6, 458790, 1179695, 5, 524326, 1179695, 6, 720933, 1114159, 5, 786469, 1114159, 6, 720934, 1179695, 5, 786470, 1179695, 6, 720935, 1114159, 5, 786471, 1114159, 6, 720936, 1179695, 5, 786472, 1179695, 6, -196615, 1114159, 5, -131079, 1114159, 6, -196614, 1179695, 5, -131078, 1179695, 6, -65543, 1114159, 5, -7, 1114159, 6, -65542, 1179695, 5, -6, 1179695, 6, 65529, 1114159, 5, 131065, 1114159, 6, 65530, 1179695, 5, 131066, 1179695, 6, 196601, 1114159, 5, 262137, 1114159, 6, 196602, 1179695, 5, 262138, 1179695, 6, 327673, 1114159, 5, 393209, 1114159, 6, 327674, 1179695, 5, 393210, 1179695, 6, 458745, 1114159, 5, 458746, 1179695, 5, -327687, 1114159, 5, -262151, 1114159, 6, -327686, 1179695, 5, -262150, 1179695, 6, 196632, 393263, 0, 196633, 458799, 0, 196631, 458799, 0, 131093, 393263, 0, 131094, 458799, 0, -65528, 1638447, 5, 8, 1638447, 6, -65527, 1703983, 5, 9, 1703983, 6, -65526, 1900591, 5, 10, 1900591, 6, -65525, 1966127, 5, 11, 1966127, 6, -393206, 458799, 0, -327670, 458799, 0, -262134, 458799, 0, -196598, 458799, 0, -393207, 393263, 0, -327671, 393263, 0, -262135, 393263, 0, -196599, 393263, 0, -131063, 393263, 0, -131062, 458799, 0)

[node name="Player" parent="." instance=ExtResource("2_owedk")]
z_index = 5
position = Vector2(225, 553)

[node name="Collectibles" type="Node" parent="."]

[node name="CollectiblePos" type="Node" parent="."]

[node name="CollectiblePos2" type="Marker2D" parent="CollectiblePos"]
position = Vector2(1488, 273)

[node name="CollectiblePos" type="Marker2D" parent="CollectiblePos"]
position = Vector2(1748, 333)

[node name="CollectiblePos3" type="Marker2D" parent="CollectiblePos"]
position = Vector2(570, -135)

[node name="CollectiblePos5" type="Marker2D" parent="CollectiblePos"]
position = Vector2(1554, 573)

[node name="CollectiblePos7" type="Marker2D" parent="CollectiblePos"]
position = Vector2(1045, 563)

[node name="CollectiblePos8" type="Marker2D" parent="CollectiblePos"]
position = Vector2(514, 553)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("7_2t8o1")]
metadata/_edit_lock_ = true

[node name="Menu" parent="CanvasLayer" instance=ExtResource("6_xp7mi")]
visible = false
theme = SubResource("Theme_r3ilj")

[node name="TranslationPuzzle" parent="CanvasLayer" instance=ExtResource("7_0t65n")]
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(20, 68)
shape = SubResource("RectangleShape2D_wkbfw")

[node name="Deathzone" parent="." instance=ExtResource("8_o1psb")]
position = Vector2(-164, 783)
scale = Vector2(3.3089, -5.32473)

[node name="StartPoint" type="Marker2D" parent="."]
position = Vector2(227, 551)

[node name="Statue" parent="." instance=ExtResource("11_byl0k")]
position = Vector2(277, -93)

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_qta7l")

[node name="BackgroundSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_t8afc")
volume_db = -27.086
autoplay = true

[node name="Background" parent="." instance=ExtResource("13_c1inx")]

[node name="WeakGrounds" type="Node" parent="."]

[node name="WeakGround2" parent="WeakGrounds" instance=ExtResource("14_54tyx")]
position = Vector2(1295, 623)

[node name="WeakGround3" parent="WeakGrounds" instance=ExtResource("14_54tyx")]
position = Vector2(1552, 620)

[node name="WeakGround" parent="WeakGrounds" instance=ExtResource("14_54tyx")]
position = Vector2(1038, 622)

[node name="WeakGround6" parent="WeakGrounds" instance=ExtResource("14_54tyx")]
position = Vector2(1496, 366)

[node name="WeakGround7" parent="WeakGrounds" instance=ExtResource("14_54tyx")]
position = Vector2(1322, 299)

[node name="WeakGround8" parent="WeakGrounds" instance=ExtResource("14_54tyx")]
position = Vector2(1153, 232)

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_2canv")

[connection signal="body_entered" from="Deathzone" to="." method="_on_deathzone_body_entered"]
[connection signal="body_entered" from="Statue" to="." method="_on_statue_body_entered"]
[connection signal="body_exited" from="Statue" to="." method="_on_statue_body_exited"]
